force-app/main/default/objects/Service__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <label>Accessibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stairs</fullName>
            </value>
            <value>
                <fullName>Elevator</fullName>
            </value>
            <value>
                <fullName>Ground Level - no stairs</fullName>
            </value>
            <value>
                <fullName>Downstairs</fullName>
            </value>
            <value>
                <fullName>Porch Stairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>