force-app/main/default/objects/Service__c/fields/Address_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Address_Normalized__c</fullName>
    <description>Normalized address key for duplicate detection. Combines uppercase address, city, and zip. Apartment/unit stripping is handled in the detection Flow.</description>
    <formula>UPPER(TRIM(Address__c)) &amp; "|" &amp; UPPER(TRIM(City__c)) &amp; "|" &amp; LEFT(TRIM(Zip__c), 5)</formula>
    <inlineHelpText>Used for duplicate address detection. Full address key - fuzzy matching logic is in the detection Flow.</inlineHelpText>
    <label>Address Normalized</label>
    <type>Text</type>
</CustomField>