force-app/main/default/objects/Service__c/fields/Adults_in_Household__c.field-meta.xml
<CustomField>
    <fullName>Adults_in_Household__c</fullName>
    <formula>Total_Household_Members_Including_Client__c - Number_of_Children__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adults in Household</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>