force-app/main/default/objects/Service__c/fields/AgreementText__c.field-meta.xml
<CustomField>
    <fullName>AgreementText__c</fullName>
    <label>Agreement Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>