force-app/main/default/objects/Service__c/fields/Apt_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Apt_Unit_Number__c</fullName>
    <label>Apt/Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>