force-app/main/default/objects/Service__c/fields/BalanceDue__c.field-meta.xml
<CustomField>
    <fullName>BalanceDue__c</fullName>
    <formula>TotalAmount__c-TotalPaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>