force-app/main/default/objects/Service__c/fields/Bed_bugs__c.field-meta.xml
<CustomField>
    <fullName>Bed_bugs__c</fullName>
    <label>Bed Bugs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>