force-app/main/default/objects/Service__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-Plex</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Mobile Home</fullName>
            </value>
            <value>
                <fullName>Townhome</fullName>
            </value>
            <value>
                <fullName>Tri-Plex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>