force-app/main/default/objects/Service__c/fields/CancelledReason__c.field-meta.xml
<CustomField>
    <fullName>CancelledReason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caseworker Cancelled</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>Max Appts Reached</fullName>
            </value>
            <value>
                <fullName>Client Previously Served (Served This Year Already)</fullName>
            </value>
            <value>
                <fullName>Client in Processing (Separate Referral Being Processed)</fullName>
            </value>
            <value>
                <fullName>Pickup Cancelled</fullName>
            </value>
            <value>
                <fullName>Delivery Cancelled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
                <isActive>false</isActive>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>