force-app/main/default/objects/Service__c/fields/Caseworker__c.field-meta.xml
<CustomField>
    <fullName>Caseworker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Must be a contact of the agency that you selected.</inlineHelpText>
    <label>Caseworker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Case Manager</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Caseworker)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>