force-app/main/default/objects/Service__c/fields/Caseworker_Email__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Email__c</fullName>
    <formula>Caseworker__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caseworker Email</label>
    <type>Text</type>
</CustomField>