force-app/main/default/objects/Service__c/fields/CaseworkerName__c.field-meta.xml
<CustomField>
    <fullName>CaseworkerName__c</fullName>
    <formula>Caseworker__r.Full_Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caseworker Name</label>
    <type>Text</type>
</CustomField>