force-app/main/default/objects/Service__c/fields/CheckPointColor__c.field-meta.xml
<CustomField>
    <fullName>CheckPointColor__c</fullName>
    <formula>IF(AND(RecordType.DeveloperName = &quot;Client_Request&quot;, ISPICKVAL(Pickup_type__c, &quot;Delivery&quot;)), &quot;Red&quot;,
  IF(AND(OR(RecordType.DeveloperName = &quot;Client_Request&quot;, RecordType.DeveloperName = &quot;General_Delivery&quot;), ISPICKVAL(Status__c, &quot;Redelivery&quot;)), &quot;Green&quot;,
    IF(AND(RecordType.DeveloperName = &quot;General_Delivery&quot;, ISPICKVAL(SubType__c, &quot;HOPE&quot;)), &quot;Purple&quot;,
      IF(RecordType.DeveloperName = &quot;Donation_Pickup&quot;, &quot;Blue&quot;,
        IF(RecordType.DeveloperName = &quot;General_Delivery&quot;, &quot;Orange&quot;, null)
      )
    )
  )
)</formula>
    <label>Check point Color</label>
    <type>Text</type>
</CustomField>