force-app/main/default/objects/Service__c/fields/Client_Pay__c.field-meta.xml
<CustomField>
    <fullName>Client_Pay__c</fullName>
    <label>Client Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>