force-app/main/default/objects/Service__c/fields/ClientServicesReviewed__c.field-meta.xml
<CustomField>
    <fullName>ClientServicesReviewed__c</fullName>
    <label>Client Services Reviewed</label>
    <type>DateTime</type>
</CustomField>