force-app/main/default/objects/Service__c/fields/CollectionContactCount__c.field-meta.xml
<CustomField>
    <fullName>CollectionContactCount__c</fullName>
    <description>Number of collection contact attempts</description>
    <defaultValue>0</defaultValue>
    <label>Collection Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>