force-app/main/default/objects/Service__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>IF( 
AND(RecordType.DeveloperName = &apos;ClientRequest&apos;, ISPICKVAL(Pickup_type__c, &apos;Delivery&apos;) ),
&apos;red&apos;,  
IF(
OR(
RecordType.DeveloperName = &apos;ClientRequest&apos;,
AND(RecordType.DeveloperName = &apos;ClientRequest&apos;,ISPICKVAL(Status__c, &apos;Redelivery&apos;))),
&apos;green&apos;,
 IF(
AND(RecordType.DeveloperName = &apos;GeneralDelivery&apos;,  ISPICKVAL(SubType__c, &apos;HOPE&apos;) ),
&apos;purple&apos;,
  IF(RecordType.DeveloperName = &apos;DonationPickup&apos;,
&apos;blue&apos;,  
IF(RecordType.DeveloperName = &apos;GeneralDelivery&apos;,
&apos;orange&apos;,
&apos;black&apos;) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>