force-app/main/default/objects/Service__c/fields/Completed_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Status_Date__c</fullName>
    <label>Completed Status Date</label>
    <type>DateTime</type>
</CustomField>