force-app/main/default/objects/Service__c/fields/Complex_Name__c.field-meta.xml
<CustomField>
    <fullName>Complex_Name__c</fullName>
    <label>Complex Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>