force-app/main/default/objects/Service__c/fields/ContactAttempts__c.field-meta.xml
<CustomField>
    <fullName>ContactAttempts__c</fullName>
    <label>Contact Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>