force-app/main/default/objects/Service__c/fields/ContactBirthdate__c.field-meta.xml
<CustomField>
    <fullName>ContactBirthdate__c</fullName>
    <formula>Contact__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Birthdate</label>
    <type>Date</type>
</CustomField>