force-app/main/default/objects/Service__c/fields/ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>