force-app/main/default/objects/Service__c/fields/ContactGender__c.field-meta.xml
<CustomField>
    <fullName>ContactGender__c</fullName>
    <formula>TEXT(Contact__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Gender</label>
    <type>Text</type>
</CustomField>