force-app/main/default/objects/Service__c/fields/ContactHomePhone__c.field-meta.xml
<CustomField>
    <fullName>ContactHomePhone__c</fullName>
    <formula>Contact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Home Phone</label>
    <type>Text</type>
</CustomField>