force-app/main/default/objects/Service__c/fields/ContactMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>ContactMobilePhone__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile Phone</label>
    <type>Text</type>
</CustomField>