force-app/main/default/objects/Service__c/fields/ContactOtherPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactOtherPhone__c</fullName>
    <formula>Contact__r.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Other Phone</label>
    <type>Text</type>
</CustomField>