force-app/main/default/objects/Service__c/fields/ContactPreferredPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPreferredPhone__c</fullName>
    <formula>TEXT(Contact__r.npe01__PreferredPhone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Preferred Phone</label>
    <type>Text</type>
</CustomField>