force-app/main/default/objects/Service__c/fields/ContactPronouns__c.field-meta.xml
<CustomField>
    <fullName>ContactPronouns__c</fullName>
    <formula>Contact__r.Pronouns__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Pronouns</label>
    <type>Text</type>
</CustomField>