force-app/main/default/objects/Service__c/fields/ContactVeteran__c.field-meta.xml
<CustomField>
    <fullName>ContactVeteran__c</fullName>
    <formula>Contact__r.Veteran__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Veteran</label>
    <type>Checkbox</type>
</CustomField>