force-app/main/default/objects/Service__c/fields/Copilot2Name__c.field-meta.xml
<CustomField>
    <fullName>Copilot2Name__c</fullName>
    <formula>Trip__r.CoPilot2__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copilot 2 Name</label>
    <type>Text</type>
</CustomField>