force-app/main/default/objects/Service__c/fields/CopilotName__c.field-meta.xml
<CustomField>
    <fullName>CopilotName__c</fullName>
    <formula>Trip__r.CoPilot1__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copilot Name</label>
    <type>Text</type>
</CustomField>