force-app/main/default/objects/Service__c/fields/CopilotOne__c.field-meta.xml
<CustomField>
    <fullName>CopilotOne__c</fullName>
    <label>Copilot 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>