force-app/main/default/objects/Service__c/fields/CopilotTwo__c.field-meta.xml
<CustomField>
    <fullName>CopilotTwo__c</fullName>
    <label>Copilot 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>