force-app/main/default/objects/Service__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clark</fullName>
            </value>
            <value>
                <fullName>King</fullName>
            </value>
            <value>
                <fullName>Kitsap</fullName>
            </value>
            <value>
                <fullName>Lewis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pierce</fullName>
            </value>
            <value>
                <fullName>Thurston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>