force-app/main/default/objects/Service__c/fields/CreatedInvoice__c.field-meta.xml
<CustomField>
    <fullName>CreatedInvoice__c</fullName>
    <formula>If(NOT(ISBLANK(InvoiceCreated__c)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Invoice</label>
    <type>Checkbox</type>
</CustomField>