force-app/main/default/objects/Service__c/fields/Current_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Appointment_Status__c</fullName>
    <formula>TEXT(CurrentAppointment__r.Status__c)</formula>
    <inlineHelpText>Status of the most recent appointment</inlineHelpText>
    <label>Current Appointment Status</label>
    <type>Text</type>
</CustomField>