force-app/main/default/objects/Service__c/fields/CurrentAppointment__c.field-meta.xml
<CustomField>
    <fullName>CurrentAppointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>