force-app/main/default/objects/Service__c/fields/Delete_Date__c.field-meta.xml
<CustomField>
    <fullName>Delete_Date__c</fullName>
    <formula>CreatedDate + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delete Date</label>
    <type>Date</type>
</CustomField>