force-app/main/default/objects/Service__c/fields/DeletionDate__c.field-meta.xml
<CustomField>
    <fullName>DeletionDate__c</fullName>
    <label>Deletion Date (old)</label>
    <type>Date</type>
</CustomField>