force-app/main/default/objects/Service__c/fields/DeliveryControllField__c.field-meta.xml
<CustomField>
    <fullName>DeliveryControllField__c</fullName>
    <formula>if(NotLoadedItems__c+LoadedDeclinedItems__c != Total_Items__c, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Controll Field</label>
    <type>Checkbox</type>
</CustomField>