force-app/main/default/objects/Service__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Contact__r.Full_Contact_Name__c</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>