force-app/main/default/objects/Service__c/fields/DuaDate__c.field-meta.xml
<CustomField>
    <fullName>DuaDate__c</fullName>
    <label>Dua Date</label>
    <type>Date</type>
</CustomField>