force-app/main/default/objects/Service__c/fields/Due_Date_Invoice_1__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Invoice_1__c</fullName>
    <formula>CreatedDate  + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due_Date_Invoice_-1</label>
    <type>Date</type>
</CustomField>