force-app/main/default/objects/Service__c/fields/Duplicate_Match_Service__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Match_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the prior Service record that triggered the duplicate flag. Allows reviewers to easily compare the two requests.</description>
    <inlineHelpText>The prior Service at this address that triggered the duplicate review flag.</inlineHelpText>
    <label>Duplicate Match Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Duplicate Flags</relationshipLabel>
    <relationshipName>Duplicate_Flags</relationshipName>
    <type>Lookup</type>
</CustomField>