force-app/main/default/objects/Service__c/fields/Duplicate_Review_Cleared_By__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Review_Cleared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user (Client Service Manager) who reviewed and cleared the duplicate flag, allowing the Service to proceed.</description>
    <inlineHelpText>Who cleared the duplicate review flag.</inlineHelpText>
    <label>Duplicate Review Cleared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services_Duplicate_Cleared</relationshipName>
    <type>Lookup</type>
</CustomField>