force-app/main/default/objects/Service__c/fields/Duplicate_Review_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Review_Cleared_Date__c</fullName>
    <description>Date and time when the duplicate review flag was cleared.</description>
    <inlineHelpText>When the duplicate review was cleared.</inlineHelpText>
    <label>Duplicate Review Cleared Date</label>
    <type>DateTime</type>
</CustomField>