force-app/main/default/objects/Service__c/fields/Duplicate_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Review_Notes__c</fullName>
    <description>Notes from the Client Service Manager explaining the resolution of the duplicate review (e.g., confirmed different apartment, confirmed same household - cancelled, etc.)</description>
    <inlineHelpText>Enter notes explaining the duplicate review resolution.</inlineHelpText>
    <label>Duplicate Review Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>