force-app/main/default/objects/Service__c/fields/EmailAttempts__c.field-meta.xml
<CustomField>
    <fullName>EmailAttempts__c</fullName>
    <label>Email Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>