force-app/main/default/objects/Service__c/fields/Homeless_in_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Homeless_in_Last_Month__c</fullName>
    <label>Homeless in Last Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>