force-app/main/default/objects/Service__c/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <label>Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 15,000</fullName>
            </value>
            <value>
                <fullName>15,001 - 25,000</fullName>
            </value>
            <value>
                <fullName>25,001 - 30,000</fullName>
            </value>
            <value>
                <fullName>30,001 - 35,000</fullName>
            </value>
            <value>
                <fullName>35,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>