force-app/main/default/objects/Service__c/fields/InvoiceCreated__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreated__c</fullName>
    <label>Invoice Created</label>
    <type>DateTime</type>
</CustomField>