force-app/main/default/objects/Service__c/fields/InvoiceDue__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDue__c</fullName>
    <formula>IF( RecordTypeName__c = &apos;ClientRequest&apos;, LastAppointmentDate__c + 30, DATEVALUE(CreatedDate))</formula>
    <inlineHelpText>30 days from last appointment date</inlineHelpText>
    <label>Invoice Due</label>
    <type>Date</type>
</CustomField>