force-app/main/default/objects/Service__c/fields/InvoiceNumberVersion__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumberVersion__c</fullName>
    <formula>Invoice_Number__c + &apos;-&apos; + TEXT(InvoiceVersion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number Version</label>
    <type>Text</type>
</CustomField>