force-app/main/default/objects/Service__c/fields/InvoiceProcessingFee__c.field-meta.xml
<CustomField>
    <fullName>InvoiceProcessingFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Processing Fee</label>
    <type>Checkbox</type>
</CustomField>