force-app/main/default/objects/Service__c/fields/InvoiceVersion__c.field-meta.xml
<CustomField>
    <fullName>InvoiceVersion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoice Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>