force-app/main/default/objects/Service__c/fields/IsRequestNinetyDaysOverDue__c.field-meta.xml
<CustomField>
    <fullName>IsRequestNinetyDaysOverDue__c</fullName>
    <formula>IF(TODAY() &gt;= DATEVALUE(CreatedDate) + 90, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Request Ninety Days Over Due</label>
    <type>Checkbox</type>
</CustomField>