force-app/main/default/objects/Service__c/fields/isRequestSixtyDaysOverDue__c.field-meta.xml
<CustomField>
    <fullName>isRequestSixtyDaysOverDue__c</fullName>
    <formula>IF(AND(TODAY() &gt;= DATEVALUE(CreatedDate) + 60,  TODAY() &lt;= DATEVALUE(CreatedDate) + 90), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Request Sixty Days Over Due</label>
    <type>Checkbox</type>
</CustomField>