force-app/main/default/objects/Service__c/fields/ItemsCompleted__c.field-meta.xml
<CustomField>
    <fullName>ItemsCompleted__c</fullName>
    <label>Items Completed</label>
    <summarizedField>ServiceItem__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>ServiceItem__c.Status__c</field>
        <operation>equals</operation>
        <value>True, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>